Fix issue, which caused overflow. Unneded arrows

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body
   margin:0 auto;
   font-family: 'Oswald', sans-serif;
   font-style: italic;
-  overflow-x: hidden;
+
 }
 
 body img,
@@ -62,7 +62,6 @@ padding: 0;
 
 header
 {
-width:100%;
 margin: 0 auto;
 }
 
